--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@rainbow-me/rainbowkit": "^1.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "solve3-module": "../module",
     "viem": "^1.6.0",
     "wagmi": "^1.3.10"
   },
   "devDependencies": {
+    "@solve3/captcha": "^1.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -26,6 +26,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "react-spinners": "^0.13.8",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
